--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="main.css" />
 	<link rel="stylesheet" type="text/css" href="produtos.css" />
 	<link href="banner.css" rel="stylesheet" type="text/css" />
+	<link href="piscar.css" rel="stylesheet" type="text/css" />
 	<script type="text/jscript" src="banner.js"></script>
 	<script type="text/javascript"; src="hora.js"></script>
+	<script type="text/javascript"; src="piscar.js"></script>
 </head>
 
 <body onload="Tempo()">
@@ -25,7 +27,9 @@
 
 		<div class="principal">
 			<div class="corpo">
-				<div class="titulo_corpo">Ofertas Imperd&iacuteveis:</div>
+				<div class="espaco_titulo">
+					<div class="titulo_corpo_aparece" id="titulo_pisca">Ofertas Imperd&iacuteveis:</div>
+				</div>
 				
 				<div id="banner" class="banner">
 					<div id="banner_img">
